@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
- - add remaning 4xx status codes
+ - add remaining 4xx status codes
+ - add HTTP_OK (200) status code
 
 0.0.1_04  2012-06-20 10:16:03 Europe/London
  - add [AutoPrereqs] plugin
